--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
         .venue-section {
             background: #f9f5f5;
-            padding: 15px;
+            padding: 25px;
             border-radius: 15px;
             margin: 20px 0;
             text-align: center;
@@ -676,7 +676,7 @@
                     <div class="month-label">Tháng Bảy</div>
                     <div class="day-label">Thứ 7</div>
                     <div class="event-date">26</div>
-                    <div class="time-label">... giờ</div>
+                    <div class="time-label">17 giờ</div>
                     <div class="year">2025</div>
                 </div>
 
